--- a/documentation/report.tex
+++ b/documentation/report.tex
@@ -15,7 +15,7 @@
 
 \begin{figure}
     \centering
-    \includegraphics[width=1\textwidth]{ICT_logo}
+    \includegraphics[width=1\textwidth]{logo}
 \end{figure}
 
 \title{Assignment Report}
