Removed commented code

--- a/Documentation/Report.tex
+++ b/Documentation/Report.tex
@@ -67,6 +67,8 @@ The list was also tested concurrently. A function was created that receives a li
 
 \section{Task 3}
 
+\subsection{The Design}
+
 \begin{figure}[H]
     \centering
     \includegraphics[width=1\textwidth]{"UML 3"}
@@ -74,5 +76,6 @@ The list was also tested concurrently. A function was created that receives a li
 \end{figure}
 \section{Appendix}
 
+For this task, 
 
 \end{document}
