--- a/Documentation/Report.tex
+++ b/Documentation/Report.tex
@@ -62,7 +62,7 @@ The list was also tested concurrently. A function was created that receives a li
 \subsection{The Design}
 \begin{figure}[H]
     \centering
-    \includegraphics[width=1\textwidth]{"UML 2"}
+    \includegraphics[width=\textwidth,height=\textheight,keepaspectratio]{"UML 2"}
     \caption{Task 2 UML Diagram}
 \end{figure}
 
