--- a/Documentation/Report.tex
+++ b/Documentation/Report.tex
@@ -50,7 +50,7 @@ This variable contains the value of the node which is the same type as that indi
 \subsubsection{nextPtr}
 This variable contains a pointer towards the next node of the immutable list.
 
-\subsection{Testing}
+\subsection{Critical evaluation and limitations}
 \subsubsection{Initial testing}
 To test the immutability of a list, a list was created with some initial values. Then a new list was created using the old list and the push method. A third list was created using the first one and the push method with a different value passed as a parameter. All three lists were printed as should.
 
@@ -72,11 +72,13 @@ In my design for this task, three main classes were created for securities, orde
 \subsection{Testing}
 For the testing, JUnit was used and new methods were added as the project was developed. The tests tried the functions with invalid and valid parameters.
 
-\subsection{Limitations}
-My solution 
+\subsection{Critical evaluation and limitations}
+My solution uses array lists to keep track of objects. This means that it takes O(n) to find the desired object during a search. This would have been more efficient if hash maps where used. On top of that, weak referencing would have made the design more memory efficient.
 
 \subsection{Polymorphism}
 To implement the log, a class can be created with a new list structure with only an add method (and no remove). Every time 'book()' or 'list()' or 'cancel()' is called, the action is added to this new list. Tampering this list can be avoided with proper encapsulation.
+\linebreak
+Apart from that, the matching engine could have been tested more rigorously by testing even more possible combinations.
 
 \section{Task 3}
 
@@ -95,5 +97,7 @@ For the intergration function, a template function was created that received 'Ex
 \subsection{Testing}
 
 For the testing, an expression that used all operators was used and the output was checked. As for the integration part, an expression was passed and checked against the correct answer.
+
+\subsection{Critical evaluation and limitations}
 
 \end{document}
