--- a/Documentation/Report.tex
+++ b/Documentation/Report.tex
@@ -3,6 +3,8 @@
 \usepackage{listings}
 \usepackage[document]{ragged2e}
 \usepackage{float}
+\usepackage[final]{pdfpages}
+
 
 \lstset{breaklines}
 \lstdefinestyle{mystyle}{
@@ -25,6 +27,9 @@
 
 \tableofcontents
 \newpage
+
+Gitlab repository: https://gitlab.com/manwel.bugeja.18/oop-assignment.git
+
 
 \section{Task 1}
 
@@ -120,5 +125,7 @@ For the testing, an expression that used all operators was used and the output w
 
 \subsection{Critical evaluation and limitations}
 It is difficult to know whether the inlined functions were done as should. Also, since the expression is evaluated in a kind of recursive manner (with the classes X  and  C being the base cases) the code generated could be very cumbersome especially for very long expressions.
+
+\includepdf{"Plagerism Form"}
 
 \end{document}
