--- a/Documentation/Report.tex
+++ b/Documentation/Report.tex
@@ -29,7 +29,7 @@
 \newpage
 
 Gitlab repository: https://gitlab.com/manwel.bugeja.18/oop-assignment.git
-
+Commit SHA: bf973af0790bffb9897183aa4f312369d9cff793
 
 \section{Task 1}
 
